[gd_scene load_steps=8 format=2]

[ext_resource path="res://HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://Map.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://ZoomingCamera2D.tscn" type="PackedScene" id=5]
[ext_resource path="res://Misc. Assets/Wilhelm_Scream.wav" type="AudioStream" id=6]
[ext_resource path="res://Misc. Assets/Minecraft Oof.wav" type="AudioStream" id=7]

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="HUD" parent="." instance=ExtResource( 1 )]

[node name="Map" parent="." instance=ExtResource( 2 )]

[node name="TileMapTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Player" parent="." instance=ExtResource( 4 )]
scale = Vector2( 0.25, 0.25 )

[node name="ZoomingCamera2D" parent="Player" instance=ExtResource( 5 )]
zoom = Vector2( 0.1, 0.1 )

[node name="Enemies" type="Node" parent="."]

[node name="WilhelmScream" type="AudioStreamPlayer2D" parent="."]
scale = Vector2( 0.25, 0.25 )
stream = ExtResource( 6 )

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
[connection signal="timeout" from="TileMapTimer" to="." method="_on_MapTimer1_timeout"]
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
